# ssaHdrify-tauri

./: .gitignore  .prettierignore  .prettierrc.json  .stylelintrc.json  CLAUDE.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
scripts/: build-engine.mjs  uuencode-test.mjs
scripts/lib/: app-version.mjs
src/: App.tsx  cli-engine-entry.test.ts  cli-engine-entry.ts  cli-engine-roundtrip.test.ts  index.css  main.tsx  shell.css  vite-env.d.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: dropzone.rs  encoding.rs  font_cache.rs  font_cache_commands.rs  fonts.rs  fs_policy.rs  lib.rs  safe_io.rs  util.rs
src-tauri/tests/: test_capabilities.rs  test_chain.rs  test_cli_diagnostics.rs  test_cli_rename.rs  test_cli_timing_map.rs  test_font_cache.rs  test_real_fonts.rs  test_scan.rs  test_subset.rs
src-tauri/tests/fixtures/: big5.ass  gbk.ass  shiftjis.ass  utf16le.ass  utf8.ass  utf8_bom.ass
src/features/batch-rename/: BatchRename.tsx  pairing-engine.test.ts  pairing-engine.ts
src/features/chain/: chain-runtime.test.ts  chain-runtime.ts  chain-types.ts  wire-format.test.ts
src/features/font-embed/: FontCacheDriftModal.tsx  FontEmbed.tsx  FontSourceModal.tsx  ass-font-section.ts  ass-uuencode.test.ts  ass-uuencode.ts  font-collector.test.ts  font-collector.ts  font-embedder.test.ts  font-embedder.ts  font-source-warning.test.ts  font-source-warning.ts  sanitization.test.ts
src/features/hdr-convert/: HdrConvert.tsx  NitViz.tsx  ass-processor.test.ts  ass-processor.ts  color-engine.test.ts  color-engine.ts  hdr-style-ui-state.test.ts  hdr-style-ui-state.ts  hdr-ui-state.test.ts  hdr-ui-state.ts  output-naming.test.ts  output-naming.ts  srt-converter.test.ts  srt-converter.ts
src/features/timing-shift/: TimingShift.tsx  timing-engine.test.ts  timing-engine.ts  timing-ui-state.test.ts  timing-ui-state.ts
src/i18n/: I18nProvider.tsx  strings.test.ts  strings.ts  useI18n.ts
src/lib/: DropErrorBanner.tsx  FileContext.tsx  LogPanel.tsx  NumberInput.tsx  PreviewTable.tsx  StatusContext.tsx  StatusProvider.tsx  base64-bytes.ts  dedup-helpers.test.ts  dedup-helpers.ts  lang-detection.ts  output-collisions.test.ts  output-collisions.ts  path-validation.test.ts  path-validation.ts  platform.ts  rename-extensions.test.ts  rename-extensions.ts  strict-number.test.ts  strict-number.ts  subtitle-parser.test.ts  subtitle-parser.ts  tab-labels.ts  tauri-api.test.ts  tauri-api.ts  unicode-controls.ts  useClickOutside.ts  useFolderDrop.ts  useLogPanel.ts  useTabStatus.ts
src/theme/: ThemeProvider.tsx  useTheme.ts
