[package]
name = "ssahdrify"
version = "1.3.1"
description = "SDR subtitle to HDR color space converter with font embedding and timing tools"
authors = ["koagaroon"]
license = "GPL-3.0-or-later"
repository = "https://github.com/koagaroon/ssaHdrify-tauri"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
font-kit = "0.14"
once_cell = "1"
chardetng = "1.0"
encoding_rs = "0.8"
fontcull = "2"
fontcull-klippa = "0.1"
fontcull-skrifa = "0.39"
fontcull-read-fonts = "0.38"
fontcull-write-fonts = "0.44"
