[package]
name = "ssahdrify"
version = "1.4.0"
description = "SDR subtitle to HDR color space converter with font embedding and timing tools"
authors = ["koagaroon"]
license = "GPL-3.0-or-later"
repository = "https://github.com/koagaroon/ssaHdrify-tauri"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "ssahdrify-cli"
path = "src/bin/cli/main.rs"

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }
serde_json = "1.0"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
deno_core = "0.400.0"
clap = { version = "4.5.53", features = ["derive"] }
tokio = { version = "1.52.2", features = ["rt"] }
font-kit = "0.14"
once_cell = "1"
rusqlite = { version = "0.39", features = ["bundled"] }
chardetng = "1.0"
encoding_rs = "0.8"
fontcull = "2"
fontcull-klippa = "0.1"
fontcull-skrifa = "0.39"
fontcull-read-fonts = "0.38"
fontcull-write-fonts = "0.44"
unicode-normalization = "0.1"
sys-locale = "0.3"
env_logger = "0.11"
# Direct dep on rfd matches the transitive version pulled in by
# tauri-plugin-dialog. Used at app setup to surface init failures via a
# native MessageBox: a Windows GUI subsystem app has no visible stdout
# or stderr, so the previous `eprintln!` + `process::exit` path was
# silent — the user just saw the app fail to launch with no signal.
rfd = "0.16"

# Release-profile tuning was introduced for the CLI binary and applies
# to BOTH the CLI and GUI binaries because they share this `[package]`.
# GUI exe shrinks ~30–40%, compile time grows, Rust hot paths
# (font scan / IPC marshal) become marginally slower; webview-driven
# UI is unaffected. If a future release wants to peel apart per-binary
# profiles, Cargo's `[profile.release.package.<name>]` overrides are
# the way — see the GUI design doc's 2026-05-08 spillover entry for
# context. Keep this comment if the profile block is reorganized.
[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
