[package]
name = "ssahdrify"
version = "1.5.0-preview.3"
description = "SDR subtitle to HDR color space converter with font embedding and timing tools"
authors = ["koagaroon"]
license = "GPL-3.0-or-later"
repository = "https://github.com/koagaroon/ssaHdrify-tauri"
edition = "2021"
rust-version = "1.77.2"
# Required because the crate now ships two bin targets (the implicit
# `ssahdrify` GUI binary from src/main.rs + the explicit `[[bin]]`
# entry for `ssahdrify-cli`). Without `default-run`, `cargo run` and
# `tauri build` fail with "failed to find main binary". Tauri's
# bundle pipeline picks up this default.
default-run = "ssahdrify"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# R17 W17.5 (N-R17-65): the GUI binary `ssahdrify` uses Cargo's
# implicit `src/main.rs` discovery — no `[[bin]]` block needed (and
# adding one alongside the implicit detection would warn under
# `cargo` 2024+). `default-run = "ssahdrify"` above is the
# disambiguation knob `tauri build` reads; this comment is the grep-
# anchor so a future search for "all binaries" finds both targets.
#
# GUI binary: implicit at `src/main.rs` (the file delegates to
#   `app_lib::run` which boots the Tauri builder).
# CLI binary: explicit `[[bin]]` below (no implicit because the
#   path is non-standard — `src/bin/cli/main.rs`).
[[bin]]
name = "ssahdrify-cli"
path = "src/bin/cli/main.rs"

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }
serde_json = "1.0"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
# Exact-pinned (not semver `0.400`) because deno_core changes its
# public API at most patch boundaries — V8 binding signatures
# (`execute_script`, `JsRuntime`, scope macros) and feature-flag
# defaults shift between 0.400.0 and 0.401.0. The CLI engine bundle
# (`scripts/build-engine.mjs`) compiles to an iife that THIS exact
# deno_core version loads; bumping requires reading the deno_core
# changelog AND re-running the CLI engine integration tests
# (`tests/test_chain.rs`) to confirm the V8 entry-points still match.
# R17 W17.5 (N-R17-74): rationale documented so a future
# `cargo update`-style "just bump the pin" decision pauses for the
# binding audit first.
deno_core = "=0.400.0"
clap = { version = "4.5.53", features = ["derive"] }
tokio = { version = "1.52.2", features = ["rt"] }
font-kit = "0.14"
once_cell = "1"
rusqlite = { version = "0.39", features = ["bundled"] }
chardetng = "1.0"
encoding_rs = "0.8"
fontcull = "2"
fontcull-klippa = "0.1"
fontcull-skrifa = "0.39"
fontcull-read-fonts = "0.38"
fontcull-write-fonts = "0.44"
unicode-normalization = "0.1"
sys-locale = "0.3"
env_logger = "0.11"
# Used by the chain feature's pre-resolved subset payload to encode
# Vec<u8> as base64 instead of the JSON `[byte, byte, ...]` form. The
# JSON-array form expands ~4-5× per byte (decimal text + comma + space)
# and pressures V8's heap on the per-font MAX_FONT_DATA_SIZE budget
# (64 MB, defined in src/fonts.rs); base64 is ~1.33× and decoded in
# TS via the local byte decoder. (R15 W15.3 N-R15-12 anchor refresh — previous mention
# of CUMULATIVE_FALLBACK_BYTES was a phantom citation; that symbol
# was removed in R6 W6.9 along with the fontcull-parse-fail fallback
# path. The justification is still load-bearing: MAX_FONT_DATA_SIZE
# guards subset_font's data return on the Ok path.)
base64 = "0.22"
# Direct dep on rfd matches the transitive version pulled in by
# tauri-plugin-dialog. Used at app setup to surface init failures via a
# native MessageBox: a Windows GUI subsystem app has no visible stdout
# or stderr, so the previous `eprintln!` + `process::exit` path was
# silent — the user just saw the app fail to launch with no signal.
rfd = "0.16"

# Release-profile tuning was introduced for the CLI binary and applies
# to BOTH the CLI and GUI binaries because they share this `[package]`.
# GUI exe shrinks ~30–40%, compile time grows, Rust hot paths
# (font scan / IPC marshal) become marginally slower; webview-driven
# UI is unaffected. If a future release wants to peel apart per-binary
# profiles, Cargo's `[profile.release.package.<name>]` overrides are
# the way — see the GUI design doc's 2026-05-08 spillover entry for
# context. Keep this comment if the profile block is reorganized.
# R17 W17.5 (A-R17-60): `panic = "abort"` is INTENTIONALLY ABSENT.
# `fonts::subset_font` uses `std::panic::catch_unwind` to recover
# from fontcull panics on malformed font data — that recovery path
# requires the unwind runtime to be present. Enabling `panic =
# "abort"` would turn fontcull panics into immediate process exits
# (the subset call would never get a chance to translate the panic
# into the user-visible "Subset panic: …" Err string the GUI / CLI
# both rely on). The release-size win from `panic = "abort"` (~50–100
# KB exe) is dwarfed by the regression: a single hostile font file
# could SIGABRT the whole batch instead of failing one font and
# continuing. Keep `panic = "unwind"` (the default — no explicit key
# needed). Revisit only if we also remove the catch_unwind boundary.
[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
